[gd_scene load_steps=2 format=3 uid="uid://dw5x0np4or3ct"]

[ext_resource type="Script" path="res://scenes/ui/game_over_screen.gd" id="1_gameover"]

[node name="GameOverScreen" type="CanvasLayer"]
layer = 40
script = ExtResource("1_gameover")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0, 0, 0.9)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "YOU DIED"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Stats:"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Gold Earned: +0"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Continue"
